Fixed too much space on the page

--- a/UI/css/reset-password.css
+++ b/UI/css/reset-password.css
@@ -5,6 +5,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+html{
+    height: 100%;
+}
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.2em;
@@ -106,6 +109,8 @@ header{
 section{
     height: 100%;
     background: url(../assets/join.jpg);
+    background-position: center;
+    background-size: cover;
 }
 .background{
     height: 100%;
@@ -284,7 +289,9 @@ footer{
         padding: 50px;
     }
     .section2{
+        max-height: 340px;
         margin-top: 50px;
+        margin: auto;
     }
 
 
@@ -294,6 +301,5 @@ footer{
     }   
    .section2{
    max-height: 600px;
-   margin: auto;
    }
 }
