--- a/UI/css/sign-up.css
+++ b/UI/css/sign-up.css
@@ -5,6 +5,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+html{
+    height: 100%;
+}
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.2em;
@@ -106,6 +109,8 @@ header{
 section{
     height: 100%;
     background: url(../assets/join.jpg);
+    background-position: center;
+    background-size: cover;
 }
 .background{
     height: 100%;
@@ -115,8 +120,8 @@ section{
     background: rgba(0, 0, 0, 0.8);
 }
 .section1{
-    color: white;
     margin: auto;
+    color: white;
 }
 .section1 h1{
     max-width: 400px;
@@ -295,6 +300,9 @@ footer{
     body{
          max-width: 1440px;        
      }   
+    .section1{
+        margin: auto;
+    }
     .section2{
     max-height: 600px;
     }
